Adds scripts for each indvidual h3
Co-Authored by JohnNils Olson johnnils@gmail.com

--- a/index.html
+++ b/index.html
@@ -9,52 +9,55 @@
   <script src="js/scripts.js"></script>
   <title>Flash Cards</title>
 </head>
+
 <body>
-  <h3>JavaScript</h3>
-    <p>an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
-  <h3>Operators</h3>
-    <p> operators are symbols that are used to perform operations on operands</p>
-  <h3>Variables</h3>
-    <p> hold the data value and it can be changed anytime</p>
-  <h4>Variable Naming Conventions</h4>
-    <p>Variable names cannot contain spaces.
+  <div class="container">
+    <h3 id ="js">JavaScript</h3>
+      <p class="hidden" id ="jsdef">an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
+    <h3 id = "op">Operators</h3>
+      <p class="hidden" id ="opdef"> operators are symbols that are used to perform operations on operands</p>
+    <h3 id = "var">Variables</h3>
+      <p class = "hidden" id="vardef"> hold the data value and it can be changed anytime</p>
+    <h3 id="var-nam-conv">Variable Naming Conventions</h3>
+      <p class = "hidden" id = "var-nam-convdef">Variable names cannot contain spaces.
 
-      Variable names must begin with a letter, an underscore (_) or a dollar sign ($)
+    Variable names must begin with a letter, an underscore (_) or a dollar sign ($)
 
-      Variable names can only contain letters, numbers, underscores, or dollar signs.
+    Variable names can only contain letters, numbers, underscores, or dollar signs.
 
-      Variable names are case-sensitive.
+    Variable names are case-sensitive.
 
-      Certain words may not be used as variable names, because they have other meanings within JavaScript.</p>
-    <h3>Functions</h3>
-      <p>is a block of code designed to perform a particular task</p>
-    <h3>Methods</h3>
-      <p>actions that can be performed on objects</p>
-    <h3>Arguments</h3>
-      <p>is an Array-like object accessible inside functions that contains the values of the arguments passed to that function</p>
-    <h3>Parameters</h3>
-      <p>the names listed in the function definition.</p>
-    <h3>Return</h3>
-      <p>The expression whose value is to be returned.</p>
-    <h3>Chaining Methods</h3>
-      <p>also known as Cascading, refers to repeatedly calling one method after another on an object, in one continuous line of code. This technique abounds in jQuery and other JavaScript libraries and it is even common in some JavaScript native methods.</p>
-    <h3>Strings</h3>
-      <p> a sequence of one or more characters that may consist of letters, numbers, or symbols.</p>
-    <h3>Booleans</h3>
-      <p>is a datatype that returns either of two values i.e. true or false.</p>
-    <h3>Undefined</h3>
-      <p>Any object that has been declared but not initialized or defined</p>
-    <h3>NaN</h3>
-      <p>represents "Not-a-Number" value. This property indicates that a value is not a legal number.</p>
-    <h3>Null</h3>
-      <p>is a keyword in JavaScript that signifies 'no value' or nonexistence of any value.</p>
-    <h3>Alert</h3>
-      <p>displays an alert box with a specified message and an OK button</p>
-    <h3>Comments</h3>
-      <p>used to explain the code and make the program more readable for developers.</p>
-    <h3>JQuery</h3>
-      <p>JavaScript library that allows web developers to add extra functionality to their websites.</p>
-    <h3>Attributes</h3>
-      <p>All properties have a name. In addition they also have a value.</p>
+    Certain words may not be used as variable names, because they have other meanings within JavaScript.</p>
+    <h3 id="fun">Functions</h3>
+      <p class="hidden" id="fundef">is a block of code designed to perform a particular task</p>
+    <h3 id="met">Methods</h3>
+      <p class="hidden" id="metdef">actions that can be performed on objects</p>
+    <h3 id="arg">Arguments</h3>
+      <p class="hidden" id="argdef">is an Array-like object accessible inside functions that contains the values of the arguments passed to that function</p>
+    <h3 id="par">Parameters</h3>
+      <p class="hidden" id="pardef">the names listed in the function definition.</p>
+    <h3 id="ret">Return</h3>
+      <p class="hidden" id="retdef">The expression whose value is to be returned.</p>
+    <h3 id ="cha">Chaining Methods</h3>
+      <p class ="hidden" id ="chadef">also known as Cascading, refers to repeatedly calling one method after another on an object, in one continuous line of code. This technique abounds in jQuery and other JavaScript libraries and it is even common in some JavaScript native methods.</p>
+    <h3 class ="str">Strings</h3>
+      <p class ="hidden" id ="strdef"> a sequence of one or more characters that may consist of letters, numbers, or symbols.</p>
+    <h3 id ="boo">Booleans</h3>
+      <p class ="hidden" id ="boodef">is a datatype that returns either of two values i.e. true or false.</p>
+    <h3 id ="und">Undefined</h3>
+      <p class ="hidden" id ="unddef">Any object that has been declared but not initialized or defined</p>
+    <h3 id ="nan">NaN</h3>
+      <p class ="hidden" id ="nandef">represents "Not-a-Number" value. This property indicates that a value is not a legal number.</p>
+    <h3 id ="nul">Null</h3>
+      <p class ="hidden" id ="nuldef">is a keyword in JavaScript that signifies 'no value' or nonexistence of any value.</p>
+    <h3 id ="ale">Alert</h3>
+      <p class="hidden" id ="aledef">displays an alert box with a specified message and an OK button</p>
+    <h3 id ="com">Comments</h3>
+      <p class="hidden" id ="comdef">used to explain the code and make the program more readable for developers.</p>
+    <h3 id ="jqu">JQuery</h3>
+      <p class ="hidden" id ="jqudef">JavaScript library that allows web developers to add extra functionality to their websites.</p>
+    <h3 id ="att">Attributes</h3>
+      <p class ="hidden" id ="attdef">All properties have a name. In addition they also have a value.</p>
+      </div>
 </body>
 </html>
